[package]
name = "sev-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
hex = "0.4"
sev = { version = "^1.2", default-features = false, features = [
  'openssl',
  'snp',
] }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
